# hdx-scraper-ophi

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
saved_data/: download-global-pcodes-adm-1-2.csv  global-mpi.json
src/hdx/scraper/ophi/: __main__.py  dataset_generator.py  dynamic_metadata.py  hapi_dataset_generator.py  hapi_output.py  pipeline.py
src/hdx/scraper/ophi/config/: hdx_dataset_static.yaml  hdx_hapi_dataset_static.yaml  project_configuration.yaml
tests/: test_main.py
tests/fixtures/: AFG_mpi.csv  AFG_mpi_trends.csv  global_mpi.csv  global_mpi_trends.csv  hdx_hapi_poverty_rate_global.csv
tests/fixtures/input/: 2pacx-1vqpxtof5e54tgcqcdouvwkmv9kelkt-kqyiycfgtsug1b7eome7lfoviheal2ij6fyxytplajqojxyp-pub-gid-0-single-true-output-csv.csv  2pacx-1vrxpwjcm60pt8nfuo6e7qzdnkenaar3nuwdof-gtma-yh9rruiuoefnz8-41bd6t3ohoctkbrvgsump-pub-gid-0-single-true-output-csv.csv  download-global-pcodes-adm-1-2.csv  subnational-results-mpi.xlsx
